--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,8 @@ To contribute new translations or updates, please read the
 | `r emo::ji("Lithuania")` | Lithuanian, Lithuania | 1.3.0 | [lt-LT](lt-LT.html) |
 | `r emo::ji("Brazil")` | Portuguese, Brazil | 1.0.1 | [pt-BR](pt-BR.html) |
 | `r emo::ji("Russia")` | Russian, Russian Federation | 1.2.0 | [ru-RU](ru-RU.html) |
-| `r emo::ji("Spain")` | Spanish, Spain | 1.3.0 | [es-ES](es-ES.html) |
+| `r emo::ji("Spain")` | Spanish; Spain, France | 1.3.0 | [es-ES](es-ES.html) |
+| ![](img/ca-ES.webp){width="5%"} | Catalan, Spain | 1.3.0 | [ca-ES](ca-ES.html) |
 
 ## Code of Conduct (English, United States)
 
